<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="Notification Settings"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/_pref_key_notifications_vibrate"
            android:summaryOff="@string/notifications_vibrate_summary_off"
            android:summaryOn="@string/notifications_vibrate_summary_on"
            android:switchTextOff="@string/off"
            android:switchTextOn="@string/on"
            android:title="@string/pref_title_vibrate"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/_pref_key_notifications_sticky"
            android:summaryOff="@string/notification_is_not_sticky"
            android:summaryOn="@string/notification_is_sticky"
            android:switchTextOff="@string/off"
            android:switchTextOn="@string/on"
            android:title="@string/sticky_notification"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Full Battery"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/_pref_key_notify_for_full_level"
            android:summaryOff="@string/notify_for_full_level_summary_off"
            android:summaryOn="@string/notify_for_full_level_summary_on"
            android:switchTextOff="@string/off"
            android:switchTextOn="@string/on"
            android:title="@string/notify_for_full_level"
            app:iconSpaceReserved="false" />

        <com.almothafar.simplebatterynotifier.ui.preference.RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="@string/_pref_key_notify_for_full_level"
            android:key="@string/_pref_key_notifications_full_sound_ringtone"
            android:ringtoneType="notification"
            android:title="@string/notifications_full_sound_ringtone"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Warning Level"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/_pref_key_notify_for_warning_level"
            android:summaryOff="@string/notify_for_warning_level_summary_off"
            android:summaryOn="@string/notify_for_warning_level_summary_on"
            android:switchTextOff="@string/off"
            android:switchTextOn="@string/on"
            android:title="@string/notify_for_warning_level"
            app:iconSpaceReserved="false" />

        <com.almothafar.simplebatterynotifier.ui.preference.RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="@string/_pref_key_notify_for_warning_level"
            android:key="@string/_pref_key_notifications_warning_sound_ringtone"
            android:ringtoneType="notification"
            android:title="@string/notifications_warning_sound_ringtone"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Temperature"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/_pref_key_notify_high_temperature"
            android:summaryOff="@string/notify_high_temperature_summary_off"
            android:summaryOn="@string/notify_high_temperature_summary_on"
            android:switchTextOff="@string/off"
            android:switchTextOn="@string/on"
            android:title="@string/notify_high_temperature"
            app:iconSpaceReserved="false" />

        <SeekBarPreference
            android:defaultValue="45"
            android:dependency="@string/_pref_key_notify_high_temperature"
            android:key="@string/_pref_key_high_temperature_threshold"
            android:min="40"
            android:max="60"
            android:title="@string/high_temperature_threshold"
            style="@style/PreferenceSeekBar"
            app:showSeekBarValue="true"
            app:adjustable="true"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Critical Battery Level"
        app:iconSpaceReserved="false">

        <com.almothafar.simplebatterynotifier.ui.preference.RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:key="@string/_pref_key_notifications_alert_sound_ringtone"
            android:ringtoneType="notification"
            android:title="@string/notifications_alert_sound_ringtone"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/_pref_key_notify_every_tick"
            android:summaryOff="@string/notify_every_tick_summary_off"
            android:summaryOn="@string/notify_every_tick_summary_on"
            android:switchTextOff="@string/off"
            android:switchTextOn="@string/on"
            android:title="@string/notify_every_tick"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
